--- a/.github/workflows/build-openwrt-lede-b1.yml
+++ b/.github/workflows/build-openwrt-lede-b1.yml
@@ -24,17 +24,26 @@ jobs:
 
       - name: Build Environment Initialization
         run: |
-          sudo apt-get update
-          sudo apt-get -qq remove --purge mysql* php* google* firefox ghc azure-cli \
-          dotnet* powershell ruby-full zulu* llvm*
+          sudo apt update
+          sudo apt -qq purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
 
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /var/lib/docker
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf /opt/hostedtoolcache/go /opt/hostedtoolcache/Ruby /opt/hostedtoolcache/node
 
-          sudo apt-get -qq autoremove --purge
-          sudo apt-get -qq clean
+          sudo apt -qq autoremove --purge
+          sudo apt -qq clean
+
+          sudo apt -qq upgrade -y
+          sudo apt full-upgrade -y
+          sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+            bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib \
+            git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev \
+            libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz \
+            mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools \
+            libpython3-dev qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip \
+            vim wget xmlto xxd zlib1g-dev re2c
 
       - name: Build lede
         run: |
