--- a/.config
+++ b/.config
@@ -2576,8 +2576,8 @@ CONFIG_BUSYBOX_CONFIG_ASH=y
 # CONFIG_BUSYBOX_CONFIG_ASH_OPTIMIZE_FOR_SIZE is not set
 CONFIG_BUSYBOX_CONFIG_ASH_INTERNAL_GLOB=y
 CONFIG_BUSYBOX_CONFIG_ASH_BASH_COMPAT=y
-# CONFIG_BUSYBOX_CONFIG_ASH_BASH_SOURCE_CURDIR is not set
-# CONFIG_BUSYBOX_CONFIG_ASH_BASH_NOT_FOUND_HOOK is not set
+CONFIG_BUSYBOX_CONFIG_ASH_BASH_SOURCE_CURDIR=y
+CONFIG_BUSYBOX_CONFIG_ASH_BASH_NOT_FOUND_HOOK=y
 CONFIG_BUSYBOX_CONFIG_ASH_JOB_CONTROL=y
 CONFIG_BUSYBOX_CONFIG_ASH_ALIAS=y
 # CONFIG_BUSYBOX_CONFIG_ASH_RANDOM_SUPPORT is not set
@@ -5506,7 +5506,7 @@ CONFIG_PACKAGE_libpcre=y
 # CONFIG_PACKAGE_libqrtr-glib is not set
 # CONFIG_PACKAGE_libradcli is not set
 # CONFIG_PACKAGE_libradiotap is not set
-# CONFIG_PACKAGE_libreadline is not set
+CONFIG_PACKAGE_libreadline=y
 # CONFIG_PACKAGE_libredblack is not set
 # CONFIG_PACKAGE_librouteros is not set
 # CONFIG_PACKAGE_libroxml is not set
@@ -7505,7 +7505,7 @@ CONFIG_PACKAGE_wol=y
 #
 # Shells
 #
-# CONFIG_PACKAGE_bash is not set
+CONFIG_PACKAGE_bash=y
 # CONFIG_PACKAGE_fish is not set
 # CONFIG_PACKAGE_klish is not set
 # CONFIG_PACKAGE_mksh is not set
